--- a/Twinty/app/src/main/res/layout/activity_main.xml
+++ b/Twinty/app/src/main/res/layout/activity_main.xml
@@ -22,28 +22,32 @@
             android:text="Enter Your Phone Number"
             android:gravity="center"
             android:layout_marginTop="100dp"
-            android:textSize="20sp"/>
+            android:textSize="20sp"
+            android:textColor="#000000"/>
 
         <EditText
             android:id="@+id/editText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="phone"
-            android:gravity="center"
-            android:background="@drawable/boxy"
             android:layout_marginBottom="40dp"
-            android:textSize="24sp"
             android:layout_marginTop="20dp"
+            android:background="@drawable/boxy"
+            android:ems="10"
+            android:gravity="center"
+            android:inputType="phone"
+            android:paddingBottom="4dp"
             android:paddingTop="4dp"
-            android:paddingBottom="4dp"/>
+            android:textSize="24sp"
+            android:maxLength="14"
+            android:hint="(617)-922-4633"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Enter a Twitter Handle"
             android:gravity="center"
-            android:textSize="20sp"/>
+            android:textSize="20sp"
+            android:textColor="#000000"/>
 
         <EditText
             android:id="@+id/editText2"
@@ -57,7 +61,8 @@
             android:layout_marginBottom="40dp"
             android:layout_marginTop="20dp"
             android:paddingTop="4dp"
-            android:paddingBottom="4dp"/>
+            android:paddingBottom="4dp"
+            android:hint="\@heribberto"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -73,14 +78,16 @@
                     android:layout_height="wrap_content"
                     android:text="Follow"
                     android:layout_marginRight="20dp"
-                    android:background="#426FD0"/>
+                    android:background="@drawable/buttonbox"
+                    android:textAllCaps="false"/>
 
                 <Button
                     android:id="@+id/button2"
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:text="Unfollow"
-                    android:background="#426FD0"/>
+                    android:background="@drawable/buttonbox"
+                    android:textAllCaps="false"/>
             </LinearLayout>
 
         </LinearLayout>
